[package]
name = "bitvavo-snapshots-deltas"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = { version = "2.5.4", features = ["default"] }
serde_json = "1.0.140"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
prettytable = "0.10.0"
bigdecimal = "0.4"
decimal = "2.1.0"
tracing = "0.1.41"
log = "0.4.27"
tracing-subscriber = "0.3.19"
