[package]
name = "bitvavo-snapshots-deltas"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde_json = "1.0.140"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
prettytable = "0.10.0"
bigdecimal = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.101"
tokio-util = "0.7.18"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
